build/genmake.log

running: check_fortran_compiler
 mpif90 -convert big_endian -assume byterecl -fpe0 -mcmodel=medium -O3 -align -assume buffered_io -qopt-prefetch -c genmake_tcomp.f
 mpif90 -convert big_endian -assume byterecl -fpe0 -mcmodel=medium -O3 -align -assume buffered_io -qopt-prefetch -o genmake_tcomp genmake_tcomp.o
 mpirun -np 1 ./genmake_tcomp
 hello world :            1
 hello world :            2
 hello world :            3
 --> set FC_CHECK= 5 /5

running: look_for_makedepend()
 --> set MAKEDEPEND=$(TOOLSDIR)/xmakedepend

running: check_HAVE_CLOC()
 running: get_fortran_c_namemangling()
 mpicc -c genmake_test.c
genmake_test.c(1): warning #266: function "tsub" declared implicitly
  void tcall( char * string ) { tsub( string ); }
                                ^

 mpif90 -convert big_endian -assume byterecl -fpe0 -mcmodel=medium -c genmake_tcomp.f
 --> set FC_NAMEMANGLE='#define FC_NAMEMANGLE(X)  X ## _'
mpicc -c genmake_tc_1.c
mpif90 -convert big_endian -assume byterecl -fpe0 -mcmodel=medium -o genmake_tc genmake_tc_2.f genmake_tc_1.o
  HELLO WORLD   1601386238.90908     
 --> set HAVE_CLOC='t'

running: check_HAVE_SETRLSTK()
mpicc -c genmake_tc_1.c
      program hello
      external setrlstk
      call setrlstk()
      end
mpif90 -convert big_endian -assume byterecl -fpe0 -mcmodel=medium -o genmake_tc genmake_tc_2.f genmake_tc_1.o
 --> set HAVE_SETRLSTK='t'

running: check_HAVE_SIGREG()
mpicc -c genmake_tc_1.c
      program hello
      integer anint
      common /iv/ anint
      external sigreg
      call sigreg(anint)
      end
mpif90 -convert big_endian -assume byterecl -fpe0 -mcmodel=medium -o genmake_tc genmake_tc_2.f genmake_tc_1.o
 --> set HAVE_SIGREG='t'

running: check_HAVE_STAT()
mpicc -c genmake_tc_1.c
      program hello
      integer nbyte
      call tfsize(nbyte)
      print *," HELLO WORLD", nbyte
      end
mpif90 -convert big_endian -assume byterecl -fpe0 -mcmodel=medium -o genmake_tc genmake_tc_2.f genmake_tc_1.o
 --> set HAVE_STAT='t'

running: check_netcdf_libs()
===  genmake_tnc.F  >>>
      program fgennc
#include "netcdf.inc"
      integer iret, ncid, xid
      iret = nf_create('genmake_tnc.nc', NF_CLOBBER, ncid)
      IF (iret .NE. NF_NOERR) write(*,*) NF_STRERROR(iret)
      iret = nf_def_dim(ncid, 'X', 11, xid)
      IF (iret .NE. NF_NOERR) write(*,*) NF_STRERROR(iret)
      iret = nf_close(ncid)
      IF (iret .NE. NF_NOERR) write(*,*) NF_STRERROR(iret)
      end
<<<  genmake_tnc.F  ===
cat genmake_tnc.F |  cpp  -traditional -P -DWORDLENGTH=4 -DTARGET_CRAYXT -DALLOW_USE_MPI -DHAVE_SYSTEM -DHAVE_FDATE -DHAVE_ETIME_FCT -DHAVE_CLOC -DHAVE_SETRLSTK -DHAVE_SIGREG -DHAVE_STAT -I${MPICH_HOME}/include64
  WARNING: CPP failed to pre-process the netcdf test.
    Please check that $INCLUDES is properly set.
mpif90  -convert big_endian -assume byterecl -fpe0 -mcmodel=medium -O3 -align -assume buffered_io -qopt-prefetch -c genmake_tnc.f  \ 
  &&  mpif90  -convert big_endian -assume byterecl -fpe0 -mcmodel=medium -O3 -align -assume buffered_io -qopt-prefetch -o genmake_tnc.o 
genmake_tnc.f(12): error #5082: Syntax error, found END-OF-FILE when expecting one of: <LABEL> <END-OF-STATEMENT> ; TYPE INTEGER REAL COMPLEX BYTE CHARACTER CLASS DOUBLE ...
      program fgennc
--------------------^
compilation aborted for genmake_tnc.f (code 1)

==> try again with added '-lnetcdf'
cat genmake_tnc.F |  cpp  -traditional -P -DWORDLENGTH=4 -DTARGET_CRAYXT -DALLOW_USE_MPI -DHAVE_SYSTEM -DHAVE_FDATE -DHAVE_ETIME_FCT -DHAVE_CLOC -DHAVE_SETRLSTK -DHAVE_SIGREG -DHAVE_STAT -I${MPICH_HOME}/include64 > genmake_tnc.f \ 
 &&  mpif90  -convert big_endian -assume byterecl -fpe0 -mcmodel=medium -O3 -align -assume buffered_io -qopt-prefetch -c genmake_tnc.f \ 
 &&  mpif90  -convert big_endian -assume byterecl -fpe0 -mcmodel=medium -O3 -align -assume buffered_io -qopt-prefetch -o genmake_tnc genmake_tnc.o  -lnetcdf

==> try again with added '-lnetcdff -lnetcdf'
cat genmake_tnc.F |  cpp  -traditional -P -DWORDLENGTH=4 -DTARGET_CRAYXT -DALLOW_USE_MPI -DHAVE_SYSTEM -DHAVE_FDATE -DHAVE_ETIME_FCT -DHAVE_CLOC -DHAVE_SETRLSTK -DHAVE_SIGREG -DHAVE_STAT -I${MPICH_HOME}/include64 > genmake_tnc.f \ 
 &&  mpif90  -convert big_endian -assume byterecl -fpe0 -mcmodel=medium -O3 -align -assume buffered_io -qopt-prefetch -c genmake_tnc.f \ 
 &&  mpif90  -convert big_endian -assume byterecl -fpe0 -mcmodel=medium -O3 -align -assume buffered_io -qopt-prefetch -o genmake_tnc genmake_tnc.o  -lnetcdf
 --> set HAVE_NETCDF=''

running: check_HAVE_FLUSH()
  check_HAVE_FLUSH: successful
 --> set HAVE_FLUSH='t'
